// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the danger variant correctly 1`] = `
.c0 {
  color: #ff3860;
  display: block;
  font-size: 0.75rem;
  margin-top: 0.25rem;
}

<p
  class="c0"
>
  child
</p>
`;

exports[`should render the default variant correctly 1`] = `
.c0 {
  color: #4a4a4a;
  display: block;
  font-size: 0.75rem;
  margin-top: 0.25rem;
}

<p
  class="c0"
>
  child
</p>
`;

exports[`should render the success variant correctly 1`] = `
.c0 {
  color: #23d160;
  display: block;
  font-size: 0.75rem;
  margin-top: 0.25rem;
}

<p
  class="c0"
>
  child
</p>
`;
